# python-ai-lib

./: .gitignore  Dockerfile  LICENSE.md  README.md  setup.cfg  start-dev-env.sh
asmithaxe/ai/: README.md
asmithaxe/ai/cv/: README.md
asmithaxe/ai/cv/dataset/: README.md  annotation_parser.py  annotations.py  dataset_packager.py  image_processor.py  label_collector.py  pipeline.py  utils.py
asmithaxe/ai/dataset/: annotation_parser.py  annotations.py  dataset_packager.py  image_processor.py  label_collector.py
