[metadata]
name = asmithaxe-python-ai-lib
version = 1.0.0
author = Aaron Smith
author_email = github_asmithaxe_python_ai_lib@ouvert.org
description = Python module containing useful classes and functions relating to Machine Learning.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asmithaxe/python-ai-lib
project_urls =
    Bug Tracker = https://github.com/asmithaxe/python-ai-lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6